
	* config/modules/ibmtts.conf:
	* src/modules/ibmtts.c, Makefile.am: 
	* src/configure.in.in: New output module for IBM TTS synthesizer.
	It compiles and even speaks, but don't expect much else right now.

	* src/modules/module_utils.c, src/c/api/libspeechd.c: Remove do
	nothing statement in xfree().

	* src/tests/basic.test: Minor spelling and grammar corrections.

	* src/tests/ssml.text: Start on new SSML test script.

2006-04-10  Hynek Hanke  <hanke@chopin>

	* COPYING: Added GNU Lesser General Public License.

	* src/modules/module_utils.c: Relicensed to GNU Lesser General
	Public License

	* src/modules/module_utils.h: Relicensed to GNU Lesser
	General Public License

	* src/modules/module_utils_addvoice.c: Relicensed to GNU Lesser
	General Public License

	* src/modules/module_main.c: Relicensed to GNU Lesser
	General Public License

	* src/audio: Relicensed to GNU Lesser General Public License

2006-04-07  Gary Cramblitt <garycramblitt@comcast.net>

	* /src/modules/flite.c: Correct DBG "NAS" -> "ALSA"

2006-04-06  Gary Cramblitt <garycramblitt@comcast.net>

	* src/modules/module_utils.h: Fix broken macro (not previously used).

2006-03-31  Tomas Cerha  <cerha@brailcom.org>

	* FAQ: Formatting improved.

2006-03-30  Gary Cramblitt <garycramblitt@comcast.net>

	* doc/ssip.texi, spd-say.texi: Spelling and grammer corrections.
	* doc/Makefile.am: Correct build error for HTML.

2006-03-29  Gary Cramblitt <garycramblitt@comcast.net>

	* doc/speech-dispatcher.texi: Spelling and grammar corrections.
	* doc/figures/architecture.pdf: Make image smaller so it fits on pdf page.

>>>>>>> 1.264
2006-03-13  Hynek Hanke  <hanke@chopin>

	* src/audio/oss.c: Include string.h

2006-01-25  Hynek Hanke  <hanke@chopin>

	* version.sh: 0.6

	* ANNOUNCE: release 0.6

	* FAQ (A): +server_access_list

2006-01-09  Hynek Hanke  <hanke@chopin>

	* src/audio/alsa.c (gettimeofday): 0->NULL
	
	* src/audio/nas.c (nas_play): gettimeofday takes 2 arguments only
	under _GNU_SOURCE.
